ECOM-59 amend points
